responsividade ate 375px completa

--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header-top">
-        <div class="topo flex-spbt-center">
+        <div class="topo flex-spbt-center flex">
             <img src="img/logo.svg" alt="Logo E-Players">
             <nav class="menu">
                 <ul id="meus-links" class="flex-spbt-center">
@@ -66,7 +66,7 @@
                 </div>
             </div>
         </section>
-        <section class="games">
+        <section class="games flex-colunm-mobile">
             <div class="content flex-spbt-center">
                 <div class="games-aovivo">
                     <h2>AO<br>VIVO</h2>
@@ -263,7 +263,7 @@
             </div>
             <img class="logo-rodape" src="img/Logo_Branco.png" alt="Logo E-Players">
             <div class="sociais">
-                <h2>Faça parte de nosso clan, receba notícias e promoções</h2>
+                <h2>Faça parte de nosso clan, <br class="apenas-375px"> receba notícias e promoções</h2>
                 <form action="">
                     <input type="email" placeholder="E-mail">
                     <input type="submit" value="Cadastrar">
